tests/negative/assign_field_through_const_pointer.ax
module assign_field_through_const_pointer;

struct Pair {
    value: i32;
}

fn main() -> i32 {
    let pair: Pair = Pair { value: 1 };
    let ptr: *const Pair = &pair;
    ptr.value = 42;
    return 0;
}
